--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,7 @@
 TOKEN = "Your Telegram Bot Token"
+
+HOST = "Your host",
+PORT = "Your port number",
+USER = 'Your username',
+PASSWORD = 'Your SQL password',
+DBNAME = "Your Database name"
